# ATLASRPCDigiVerification

./: .clang-format  .gitignore  CMakeLists.txt  DigiChecker.cc  DigiChecker.hh  DigiValidation.cc  LICENSE  README.md
transmissionlines/: CSAplotter.py  Iplotter.py  Iplotter_animation.py  JpeakLengthFitter.py  JpeakLengthTOTFitter.py  Jpeakplotter.py  Jplotter.py  Jplotter_animation.py  Lengthplotter.py  Scopeplotter.py  Tauplotter.py  Thresholdplotter.py  TimeFactorplotter.py  geminisource.cc  plotter.py  plotter_animation.py  rpctransmission.cc  secondcoorplotter.py
